# fastnoise2-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  rustfmt.toml
.github/workflows/: ci.yml
examples/: encoded_node_tree.rs  manual.rs
fastnoise2/: Cargo.toml  README.md
fastnoise2-rs/: Cargo.toml
fastnoise2-rs/examples/: encoded_node_tree.rs  manual.rs  multithreaded.rs  safe.rs  safe_layer.rs  safe_simple_terrain.rs  typed.rs  typed_simple_terrain.rs
fastnoise2-rs/examples/wasm_emscripten/: Cargo.toml  Makefile  README.md  index.html
fastnoise2-rs/examples/wasm_emscripten/src/: main.rs
fastnoise2-rs/src/: error.rs  lib.rs  lib_test.rs  metadata.rs  safe.rs  test_utils.rs  typed.rs
fastnoise2-rs/src/generator/: basic.rs  blend.rs  cellular.rs  domain_warp.rs  domain_warp_fractal.rs  fractal.rs  mod.rs  modifier.rs  perlin.rs  simplex.rs  value.rs
fastnoise2-rs/tests/: common.rs  integration_tests.rs
fastnoise2-sys/: Cargo.toml  README.md  build.rs
fastnoise2-sys/src/: bindings.rs  lib.rs
fastnoise2/examples/: encoded_node_tree.rs  manual.rs
fastnoise2/src/: error.rs  lib.rs  metadata.rs
src/: error.rs  lib.rs  metadata.rs
