[package]
name = "fastnoise2"
version = "0.1.0"
edition = "2021"
description = "A safe Rust wrapper for FastNoise2, a modern, node-based noise generation library optimized with SIMD."
repository = "https://github.com/Lemonzyy/fastnoise2-rs"
license = "MIT"

[dependencies]
fastnoise2-sys = { path = "fastnoise2-sys" }
thiserror = "1.0"

[dev-dependencies]
image = "0.25.2"

[workspace]
resolver = "2"
members = ["fastnoise2-sys"]
