[package]
name = "fastnoise2"
version = "0.2.0"
edition = "2021"
description = "A safe Rust wrapper for FastNoise2, a node-based noise generation library optimized with SIMD."
keywords = ["noise", "simd", "procedural", "perlin", "simplex"]
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
fastnoise2-sys = { version = "0.1.1", path = "../fastnoise2-sys" }
thiserror = "1.0"

[dev-dependencies]
image = "0.25.2"

[features]
build-from-source = ["fastnoise2-sys/build-from-source"]
